--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "better-sqlite3": "^7.1.1",
+    "bootstrap": "^4.5.3",
     "express": "^4.17.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
