errorMsg, validate, restruct

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-amazing-proxy": "^1.0.63",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "^3.4.4",
+    "reactstrap": "^8.6.0"
   },
   "scripts": {
     "start": "node node_modules/react-amazing-proxy/start",
