add-login+session
Add login/logout + session and cookies

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "better-sqlite3": "^7.1.1",
     "bootstrap": "^4.5.3",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-amazing-proxy": "^1.0.63",
