--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "bootstrap": "^4.5.3",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
+    "popper.js": "^1.16.1",
     "react": "^16.14.0",
     "react-amazing-proxy": "^1.0.63",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.14.0",
+    "react-popper": "^2.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
     "reactstrap": "^8.6.0"
